--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ psycopg2==2.9.10
 pydantic==2.11.3
 pydantic-settings==2.8.1
 pydantic_core==2.33.1
+pytest==8.3.5
 python-dotenv==1.1.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
